2004-07-22 Stefan Jones <stefan.jones@multigig.com>

	* src/Makefile.am:
	Change link order so xspice compiles

2004-07-22 Adrian Dawe <adrian.dawe@multigig.com>

	* src/{measure.tcl,nodeDialog.tcl,pkgIndex.tcl.in,
	readline.tcl,spicewish,spicewish.tcl,viewer.tcl}:
	Update Tcl, plot improved

2004-07-22 Stefan Jones <stefan.jones@multigig.com>

	* src/spicepp.pl.in:
	Update

2004-07-21 Stefan Jones <stefan.jones@multigig.com>

	* src/tclspice.c:
	add getplot() command
	
2004-07-20 Stefan Jones <stefan.jones@multigig.com>

	* src/tclspice.c:
	blt_plot() - look for BLT vectors ::spice::[XY]_Data
	Make callback return plot index also
	
2004-07-19 Stefan Jones <stefan.jones@multigig.com>

	* src/tclspice.c:
	Register a SIGINT handler which stops any running bg job

	* src/frontend/commands.c:
	Make the BLT plot command default for spice plot

2004-07-19 Adrian Dawe <adrian.dawe@multigig.com>

	* src/{Makefile.am,controls.tcl,engUnits.tcl,gnuplot.tcl,
	measure.tcl,nodeDialog.tcl,pkgIndex.tcl.in,readline.tcl,
	spicewish,spicewish.tcl,tclspice_source.tcl,viewer.tcl}:
	New and much improved tclspice CLI

2004-07-12 Stefan Jones <stefan.jones@multigig.com>

	* src/tclspice.c:
	New commands: plot_typename plot_defaultscale
	Mod: spice_data can be passed the plot number
	
2004-07-07 Stefan Jones <stefan.jones@multigig.com>

	* src/tclspice.c:
	Added new Tcl command plot_getvector,
	writes to a BLT vector a plot vector

2004-06-22 Adrian Dawe <adrian.dawe@multigig.com>

	* src/spicewish:
	Sorry noticed a bug
	could you add:
	set ::spicewish_mode "standalone"
	to line 107 (at the end of load proc)

2004-06-22 Stefan Jones <stefan.jones@multigig.com>

	* src/frontend/com_dl.c:
	Moved variable declaration to beginning of function

	* configure.in:
	Change to version 17

	* src/include/ngspice.h:
	include <errno.h> for Tcl version of perror

	* src/main.c:
	Add dummy INPretrieve() symbol so ngnutmeg and co link with 
	xspice enabled.
