@@ -1,3 +1,9 @@
+2004-08-04 Stefan Jones <stefan.jones@multigig.com>
+
+	* src/tclspice.c:
+	Added escape_brackets() escapes square brackets,
+	use before before Tcl_Eval is called.
+	
 2004-07-22 Stefan Jones <stefan.jones@multigig.com>
 
 	* src/Makefile.am:
